# cpptp

./: .clang-format  .gitignore  .lgtm.yml  CMakeLists.txt  README.md  premake5.lua
.github/workflow/: test.yml
.github/workflows/: Tests.yml  ci.yml  cmake.yml  codeql-analysis.yml  test.yml
include/cpptp/: cpptr.hpp  thread_pool.hpp  utility.hpp  worker.hpp
src/: library.cpp  thread_pool.cpp  worker.cpp
test/: CMakeLists.txt  pool_test.cpp  worker_test.cpp
tests/: CMakeLists.txt  worker_test.cpp
